# grpc-example

./: .gitignore  CMakeLists.txt
cmake/: xrpc-template-config.cmake.in  xrpc-test-template-config.cmake.in
include/xrpc-test/client/: x-client.h
include/xrpc-test/server/: x-server.h
include/xrpc/client/: x-client.h
include/xrpc/proto/: math.grpc.pb.h
include/xrpc/server/: x-server.h
libs/xrpc-proto/: CMakeLists.txt
libs/xrpc-proto/cmake/: xrpc-test-protobufs-config.cmake.in
libs/xrpc-proto/scripts/: protogen.py
libs/xrpc-proto/src/proto/: types.proto
libs/xrpc-proto/src/proto/grpc/: math.proto
src/c++/client/: x-client.cc
src/c++/server/: x-server.cc
src/proto/: math.grpc.pb.cc  math.grpc.pb.h  math.pb.cc  math.pb.h  math.proto
